--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\HittableObjectList.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\Ray.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\HittableObject.h" />
     <ClInclude Include="src\HittableObjectList.h" />
+    <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\Ray.h" />
     <ClInclude Include="src\Renderer.h" />
     <ClInclude Include="src\Sphere.h" />
