--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="src\AABB.cpp" />
     <ClCompile Include="src\AARect.cpp" />
+    <ClCompile Include="src\Box.cpp" />
     <ClCompile Include="src\BVH.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\HittableObjectList.cpp" />
@@ -146,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="src\AABB.h" />
     <ClInclude Include="src\AARect.h" />
+    <ClInclude Include="src\Box.h" />
     <ClInclude Include="src\BVH.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\HittableObject.h" />
