--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
     <ClCompile Include="src\Texture.cpp" />
+    <ClCompile Include="src\Translate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="todo.txt" />
@@ -159,6 +160,7 @@
     <ClInclude Include="src\RT_STB_Image.h" />
     <ClInclude Include="src\Sphere.h" />
     <ClInclude Include="src\Texture.h" />
+    <ClInclude Include="src\Translate.h" />
     <ClInclude Include="src\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
