--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="src\MovingSphere.cpp" />
     <ClCompile Include="src\Ray.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
+    <ClCompile Include="src\Rotate.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\Translate.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="src\MovingSphere.h" />
     <ClInclude Include="src\Ray.h" />
     <ClInclude Include="src\Renderer.h" />
+    <ClInclude Include="src\Rotate.h" />
     <ClInclude Include="src\RT_STB_Image.h" />
     <ClInclude Include="src\Sphere.h" />
     <ClInclude Include="src\Texture.h" />
